# GenAIDevlopment

./: .gitignore
Python/: GenAi.code-workspace  concurrency.ipynb  contact_100.csv  contacts copy.csv  datetime.ipynb  export_contacts.ipynb  files.ipynb  list.ipynb  oops.ipynb
Python/Restapi/hello_fastapi/: main.py  pyproject.toml
Python/math_learning/: pyproject.toml
Python/math_learning/src/math_learning/: __init__.py  my_math.py
Python/math_learning/tests/: test_my_math.py
Python/modules/cli/: Convertcontacts.py  calc_library.py  interstcalc.py  main.py
Python/oops/booklibrary/core/: LibararyItem.py  Users.py  transaction.py
projects/AgenticAI-MCP/Architures/: Arciturrue.md
projects/AgenticAI-MCP/NobelCause/: prompt.md
projects/AgenticAI-MCP/basic/: llm_experiment.ipynb  main.py  pyproject.toml
projects/catalog/: main.py  pandas.ipynb  pyproject.toml
projects/chat-with-maps-live/: metadata.json  package-lock.json  package.json
projects/crew_trade/: 1_my_first_crew.ipynb  2_agents_with_tools.ipynb  3_Investment_advisor.ipynb  3_Investment_advisor_fhub.ipynb  3_investment_advisor (1).py  pyproject.toml
projects/crew_trade/src/: main.py
projects/crew_trade/src/clients/: fyers_client.py  telegram_client.py
projects/crew_trade/src/crew_trade/: config.py  execution_agent.py  notifier_agent.py  signal_agent.py  strategist_agent .py  trading_crew.py
projects/crew_trade/src/model/: __init__.py
projects/hello_langgraph/: calc.py  langgraph.json  main.py  pyproject.toml
projects/hello_langgraph/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
projects/history_langgraph/: history.py  langgraph.json  main.py  math_lang_graph.py  pyproject.toml  stats.ipynb
projects/lms/: pyproject.toml
projects/lms/src/core/: catalog.db  entites.py  sqllite.ipynb
projects/lms/src/lms/: inventory_sqlalchemy.ipynb  inventory_updated.ipynb  lms.db  panadas.ipynb
