[project]
name = "math-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "yagna", email = "yagna247@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
math-learning = "math_learning:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.pytest.ini_operations]
minversion= "7.0"
addopts="-ra -a"
testpaths= [ "tests"]
