[project]
name = "history-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "langchain-community>=0.4",
    "langchain-google-vertexai>=3.0.1",
    "langchain-text-splitters>=1.0.0",
    "langchain[openai]>=1.0.2",
    "langgraph>=1.0.1",
]
[tool.setuptools.packages.find]
where = ["."]
