[project]
name = "lms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "yagna", email = "yagna247@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.44",
]

[project.scripts]
lms = "lms:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
